fix disclaimer view issue on smaller devices where content wasn't being shown fully

--- a/src/sass/views/onboarding/onboard-disclaimer.scss
+++ b/src/sass/views/onboarding/onboard-disclaimer.scss
@@ -42,6 +42,7 @@
     .item-content {
       width: 90%;
       margin-left: 6%;
+      white-space: normal;
     }
   }
   .item-checkbox .checkbox {
